--- a/notebooks/model_training.ipynb
+++ b/notebooks/model_training.ipynb
@@ -912,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -924,10 +924,239 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "def evaluate_model(true, predicted):\n",
+    "    mae = mean_absolute_error(true, predicted)\n",
+    "    mse = mean_squared_error(true, predicted)\n",
+    "    rmse = np.sqrt(mean_squared_error(true, predicted))\n",
+    "    r2_square = r2_score(true, predicted)\n",
+    "    return mae, rmse, r2_square"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Train multiple models\n",
+    "\n",
+    "models={\n",
+    "    'LinearRegression':LinearRegression(),\n",
+    "    'Lasso':Lasso(),\n",
+    "    'Ridge':Ridge(),\n",
+    "    'Elasticnet':ElasticNet()\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trained_model_list=[]\n",
+    "model_list=[]\n",
+    "r2_list=[]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['LinearRegression', 'Lasso', 'Ridge', 'Elasticnet']"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(models)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LinearRegression()\n",
+      "Lasso()\n",
+      "Ridge()\n",
+      "ElasticNet()\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(len(list(models))):\n",
+    "    model=list(models.values())[i]\n",
+    "    print(model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['LinearRegression', 'Lasso', 'Ridge', 'Elasticnet'])"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "models.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_values([LinearRegression(), Lasso(), Ridge(), ElasticNet()])"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "models.values()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LinearRegression\n",
+      "Model Training Performance\n",
+      "RMSE: 1013.9047094344005\n",
+      "MAE: 674.0255115796833\n",
+      "R2 score 93.68908248567512\n",
+      "===================================\n",
+      "\n",
+      "\n",
+      "Lasso\n",
+      "Model Training Performance\n",
+      "RMSE: 1013.8723151049943\n",
+      "MAE: 675.2036880701621\n",
+      "R2 score 93.68948574778251\n",
+      "===================================\n",
+      "\n",
+      "\n",
+      "Ridge\n",
+      "Model Training Performance\n",
+      "RMSE: 1013.9058997761025\n",
+      "MAE: 674.0565132295895\n",
+      "R2 score 93.68906766741333\n",
+      "===================================\n",
+      "\n",
+      "\n",
+      "Elasticnet\n",
+      "Model Training Performance\n",
+      "RMSE: 1513.9140350229761\n",
+      "MAE: 1050.7468664314322\n",
+      "R2 score 85.92978759337907\n",
+      "===================================\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(len(list(models))):\n",
+    "    model=list(models.values())[i]\n",
+    "    model.fit(X_train,y_train)\n",
+    "\n",
+    "    #Make Predictions\n",
+    "    y_pred=model.predict(X_test)\n",
+    "\n",
+    "    #this is a validation(test) score\n",
+    "    mae, rmse, r2_square=evaluate_model(y_test,y_pred)\n",
+    "\n",
+    "    print(list(models.keys())[i])\n",
+    "    model_list.append(list(models.keys())[i])\n",
+    "\n",
+    "    print('Model Training Performance')\n",
+    "    print(\"RMSE:\",rmse)\n",
+    "    print(\"MAE:\",mae)\n",
+    "    print(\"R2 score\",r2_square*100)\n",
+    "\n",
+    "    r2_list.append(r2_square)\n",
+    "    \n",
+    "    print('='*35)\n",
+    "    print('\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trained_model_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.9368908248567511,\n",
+       " 0.9368948574778251,\n",
+       " 0.9368906766741333,\n",
+       " 0.8592978759337908]"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r2_list"
+   ]
   },
   {
    "cell_type": "code",
