trans.py file updated

--- a/notebooks/test.ipynb
+++ b/notebooks/test.ipynb
@@ -230,6 +230,26 @@
    "source": [
     "os.makedirs(os.path.dirname(os.path.join(\"artifacts\",\"raw.csv\")),exist_ok=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'artifacts\\\\raw.csv'"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.path.join(\"artifacts\",\"raw.csv\")"
+   ]
   }
  ],
  "metadata": {
